This is the basics of git & why do we use git?

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>
-        This is the basics of git.
+        This is the basics of git. What is git? Why do we user git? 
     </p>
 </body>
 </html>
