git basics & jenkins

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <p>
         This is the basics of git. What is git? Why do we user git? 
     </p>
+    <p>
+        Jenkins is a tool use for cicd pipelines. 
+    </p>
 </body>
 </html>
